--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ var x = setInterval(function() {
             <div class="row">
                 <div class="col-md-2 col-sm-3 col-xs-3">
                     <div class="sponsor-col">
-                        <a href="#"><img src="images/sponsor/.png" alt="1st"></a>
+                        <a href="#"><img src="images/sponsor/1.png" alt="1st"></a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-3">
@@ -493,12 +493,12 @@ var x = setInterval(function() {
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-3">
                     <div class="sponsor-col">
-                        <a href="#"><img src="images/sponsor/.png" alt="3rd"></a>
+                        <a href="#"><img src="images/sponsor/3.png" alt="3rd"></a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-3">
                     <div class="sponsor-col">
-                        <a href="#"><img src="images/sponsor/.png" alt="4th"></a>
+                        <a href="#"><img src="images/sponsor/4.png" alt="4th"></a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-3">
@@ -508,7 +508,7 @@ var x = setInterval(function() {
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-3">
                     <div class="sponsor-col">
-                        <a href="#"><img src="images/sponsor/.png" alt="6th"></a>
+                        <a href="#"><img src="images/sponsor/6.png" alt="6th"></a>
                     </div>
                 </div>
             </div>
